[gd_scene load_steps=25 format=3 uid="uid://dcdh6o2c8lpmi"]

[ext_resource type="PackedScene" uid="uid://s66mklagl4fy" path="res://HUD/HUD.tscn" id="1_4pcsc"]
[ext_resource type="Shader" path="res://MainScenes/Background.gdshader" id="2_kbmkw"]
[ext_resource type="Texture2D" uid="uid://b72lfco6hnnbt" path="res://Textures/Background/BG loop 1.png" id="3_5qa1f"]
[ext_resource type="PackedScene" uid="uid://c6uejmh8c7koe" path="res://MainScenes/game_over_screen.tscn" id="4_1tpvn"]
[ext_resource type="Texture2D" uid="uid://d0hfl38rap3wf" path="res://Textures/UI/Main_Menu/BTNs/Pause_BTN.png" id="5_dhd4y"]
[ext_resource type="PackedScene" uid="uid://bog23u7rvkoy" path="res://MainScenes/pause_menu.tscn" id="6_iu4k5"]
[ext_resource type="PackedScene" uid="uid://b2dr1w4bni0qf" path="res://MainScenes/level_completed.tscn" id="7_5rh6i"]
[ext_resource type="Script" path="res://Camera/ShakeCam.gd" id="8_gupth"]
[ext_resource type="AudioStream" uid="uid://dpnvp4i23xweo" path="res://Textures/Music/GameSong (mp3cut.net).mp3" id="9_6flcc"]
[ext_resource type="PackedScene" uid="uid://ci2dx8vxi2rne" path="res://Spawner/Spawner.tscn" id="10_kqary"]
[ext_resource type="PackedScene" uid="uid://ch5yid0u7nwuh" path="res://Enemy Manager/wave_manager.tscn" id="11_a3mc8"]
[ext_resource type="Script" path="res://Levels/Scripts/Level.gd" id="12_qr8bl"]
[ext_resource type="Script" path="res://Enemy Manager/Scripts/WaveConfig.gd" id="13_t3ira"]
[ext_resource type="PackedScene" uid="uid://dpbpiarnq8dd1" path="res://Bosses/MidBoss.tscn" id="14_o3421"]
[ext_resource type="PackedScene" uid="uid://lff5yob7g21k" path="res://Ships/Player.tscn" id="15_s1abv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2jyfw"]
shader = ExtResource("2_kbmkw")
shader_parameter/direction = Vector2(0, -1.5)
shader_parameter/speed_scale = 0.1

[sub_resource type="Resource" id="Resource_5sjy0"]
script = ExtResource("13_t3ira")
formation_type = 0
entry_pattern = 0
difficulty = 1
enemy_type = "mob1"
enemy_density = "Normal"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 100.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_xq8a0"]
script = ExtResource("13_t3ira")
formation_type = 0
entry_pattern = 0
difficulty = 1
enemy_type = "mob1"
enemy_density = "Normal"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 100.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_1wvdh"]
script = ExtResource("13_t3ira")
formation_type = 0
entry_pattern = 0
difficulty = 1
enemy_type = "mob1"
enemy_density = "Normal"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 100.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_k1dj2"]
script = ExtResource("13_t3ira")
formation_type = 0
entry_pattern = 0
difficulty = 1
enemy_type = "mob1"
enemy_density = "Normal"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 100.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Resource" id="Resource_fshke"]
script = ExtResource("13_t3ira")
formation_type = 0
entry_pattern = 0
difficulty = 1
enemy_type = "mob1"
boss_scene = ExtResource("14_o3421")
enemy_density = "Normal"
formation_center = Vector2(640, 300)
formation_radius = 150.0
formation_spacing = 100.0
spawn_delay = 0.3
entry_speed = 300.0

[sub_resource type="Animation" id="Animation_qw32v"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kg2kq"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ymc22"]
_data = {
"fade_in": SubResource("Animation_qw32v"),
"fade_out": SubResource("Animation_kg2kq")
}

[node name="Level_5" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("1_4pcsc")]
z_index = 10

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_2jyfw")
position = Vector2(-604, -154)
scale = Vector2(1.77891, 4.03472)
texture = ExtResource("3_5qa1f")
centered = false
flip_h = true
region_rect = Rect2(1.95564, -32.485, 1275.34, 770.342)

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("4_1tpvn")]

[node name="Pause" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.860185
anchor_top = 0.0104167
anchor_right = 0.957407
anchor_bottom = 0.0541667
offset_right = 105.0
offset_bottom = 105.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
icon = ExtResource("5_dhd4y")
flat = true
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("6_iu4k5")]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("7_5rh6i")]

[node name="Cam" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("8_gupth")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["BackgroundMusic"]]
process_mode = 3
position = Vector2(249, 114)
stream = ExtResource("9_6flcc")
volume_db = 10.0
autoplay = true
bus = &"Background"
parameters/looping = true

[node name="Spawner" parent="." instance=ExtResource("10_kqary")]
position = Vector2(673, 19)

[node name="WaveManager" parent="." instance=ExtResource("11_a3mc8")]

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("12_qr8bl")
level_num = 5
waves = Array[ExtResource("13_t3ira")]([SubResource("Resource_5sjy0"), SubResource("Resource_xq8a0"), SubResource("Resource_1wvdh"), SubResource("Resource_k1dj2"), SubResource("Resource_fshke")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_ymc22")
}

[node name="Player" parent="." instance=ExtResource("15_s1abv")]
position = Vector2(565, 2046)

[connection signal="pressed" from="CanvasLayer/Pause" to="." method="_on_pause_pressed"]
